--- a/src/main/resources/ApacheCXFJaxRS/apiServiceImpl.mustache
+++ b/src/main/resources/ApacheCXFJaxRS/apiServiceImpl.mustache
@@ -1,3 +1,5 @@
+{{{licenseHeaderJava}}}
+
 package {{package}}.impl;
 
 import {{package}}.*;
@@ -20,7 +22,7 @@ public class {{classname}}ServiceImpl extends {{classname}}Service {
     @Override
     public Response {{nickname}}({{#allParams}}{{>serviceQueryParams}}{{>servicePathParams}}{{>serviceHeaderParams}}{{>serviceBodyParams}}{{>serviceFormParams}}{{#hasMore}},{{/hasMore}}{{/allParams}}){
         // do some magic!
-        return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, "magic!")).build();
+        return Response.ok().entity("magic!").build();
     }
 {{/operation}}
 }
