--- a/src/main/resources/ApacheCXFJaxRS/dto.mustache
+++ b/src/main/resources/ApacheCXFJaxRS/dto.mustache
@@ -9,6 +9,7 @@ import io.swagger.annotations.*;
 import com.fasterxml.jackson.annotation.*;
 
 import javax.validation.constraints.NotNull;
+import javax.validation.constraints.Pattern;
 
 {{#models}}
 
@@ -30,9 +31,9 @@ public class {{classname}} {{#parent}}extends {{{parent}}}{{/parent}} {
   public enum {{datatypeWithEnum}} {
     {{#allowableValues}}{{#values}} {{.}}, {{/values}}{{/allowableValues}}
   };
-  {{#required}}@NotNull{{/required}}
+  {{#required}}@NotNull {{/required}}{{#pattern}}@Pattern(regexp="{{{pattern}}}"){{/pattern}}
   private {{{datatypeWithEnum}}} {{name}} = {{{defaultValue}}};{{/isEnum}}{{^isEnum}}
-  {{#required}}@NotNull{{/required}}
+  {{#required}}@NotNull {{/required}}{{#pattern}}@Pattern(regexp="{{{pattern}}}"){{/pattern}}
   private {{{datatype}}} {{name}} = {{{defaultValue}}};{{/isEnum}}{{/vars}}
 
   {{#vars}}
