--- a/src/main/resources/ApacheCXFJaxRS/api.mustache
+++ b/src/main/resources/ApacheCXFJaxRS/api.mustache
@@ -18,6 +18,7 @@ import java.io.InputStream;
 import org.apache.cxf.jaxrs.ext.multipart.Attachment;
 import org.apache.cxf.jaxrs.ext.multipart.Multipart;
 
+import javax.validation.Valid;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.*;
 
@@ -32,6 +33,7 @@ public class {{classname}}  {
    private {{classname}}Service delegate;
 
 {{#operation}}
+    @Valid
     @{{httpMethod}}
     {{#subresourceOperation}}@Path("{{path}}"){{/subresourceOperation}}
     {{#hasConsumes}}@Consumes({ {{#consumes}}"{{mediaType}}"{{#hasMore}}, {{/hasMore}}{{/consumes}} }){{/hasConsumes}}
