--- a/src/main/resources/ApacheCXFJaxRS/dto.mustache
+++ b/src/main/resources/ApacheCXFJaxRS/dto.mustache
@@ -8,6 +8,7 @@ package {{package}};
 import io.swagger.annotations.*;
 import com.fasterxml.jackson.annotation.*;
 
+import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
 import javax.validation.constraints.Pattern;
 
@@ -31,9 +32,9 @@ public class {{classname}} {{#parent}}extends {{{parent}}}{{/parent}} {
   public enum {{datatypeWithEnum}} {
     {{#allowableValues}}{{#values}} {{.}}, {{/values}}{{/allowableValues}}
   };
-  {{#required}}@NotNull {{/required}}{{#pattern}}@Pattern(regexp="{{{pattern}}}"){{/pattern}}
+  @Valid {{#required}}@NotNull(message = "Property {{{name}}} cannot be null.") {{/required}}{{#pattern}}@Pattern(regexp="{{{pattern}}}", message = "Property {{{name}}} does not conform to {{{pattern}}} pattern."){{/pattern}}
   private {{{datatypeWithEnum}}} {{name}} = {{{defaultValue}}};{{/isEnum}}{{^isEnum}}
-  {{#required}}@NotNull {{/required}}{{#pattern}}@Pattern(regexp="{{{pattern}}}"){{/pattern}}
+  @Valid {{#required}}@NotNull(message = "Property {{{name}}} cannot be null.") {{/required}}{{#pattern}}@Pattern(regexp="{{{pattern}}}", message = "Property {{{name}}} does not conform to {{{pattern}}} pattern."){{/pattern}}
   private {{{datatype}}} {{name}} = {{{defaultValue}}};{{/isEnum}}{{/vars}}
 
   {{#vars}}
